Rewrite algorithm for grouping by time: - sort list by date, dont take this state for granted - iterator-based on read-only list, less expensive than list editing Works for me, testing appreciated.

BUG: 307223